source/assets/stylesheets/templates/_index.scss
.index {

  &__hero {
    width: 100%;
    height: 300px;
    text-align: center;
    position: relative;
    margin-bottom: 30px;
    // background: image-url('index/hero.svg') no-repeat center center;
    background-size: auto 300px;
    svg { height: 300px; }

    @include media($tablet) {
      padding-top: 0;
      margin-bottom: 0;
      background-size: auto 400px;
      height: 400px;
      svg { height: 400px; }
    }

    @include media($desktop) {
      background-size: auto 450px;
      height: 450px;
      svg { height: 450px; }
    }

    img.inject-svg {
      opacity: 0;
    }

    svg {
      position: absolute;
      left: 50%;
      top: 50%;
      transform: translate(-50%, -50%);

      g {
        opacity: 0;
        transition: all 0.1s ease-out;

        &:nth-child(1) { transition-delay: 0.1s; }
        &:nth-child(2) { transition-delay: 0.2s; }
        &:nth-child(3) { transition-delay: 0.3s; }
        &:nth-child(4) { transition-delay: 0.4s; }
        &:nth-child(5) { transition-delay: 0.5s; }
        &:nth-child(6) { transition-delay: 0.6s; }
        &:nth-child(7) { transition-delay: 0.7s; }
        &:nth-child(8) { transition-delay: 0.8s; }
        &:nth-child(9) { transition-delay: 0.9s; }
        &:nth-child(10) { transition-delay: 1s; }
        &:nth-child(11) { transition-delay: 1.1s; }
        &:nth-child(12) { transition-delay: 1.2s; }
        &:nth-child(13) { transition-delay: 1.3s; }
        &:nth-child(14) { transition-delay: 1.4s; }
        &:nth-child(15) { transition-delay: 1.5s; }
        &:nth-child(16) { transition-delay: 1.6s; }
        &:nth-child(17) { transition-delay: 1.7s; }
        &:nth-child(18) { transition-delay: 1.8s; }
        &:nth-child(19) { transition-delay: 1.9s; }
        &:nth-child(20) { transition-delay: 2s; }
        &:nth-child(21) { transition-delay: 2.1s; }
        &:nth-child(22) { transition-delay: 2.2s; }
        &:nth-child(23) { transition-delay: 2.3s; }
        &:nth-child(24) { transition-delay: 2.4s; }
        &:nth-child(25) { transition-delay: 2.5s; }
        &:nth-child(26) { transition-delay: 2.6s; }
        &:nth-child(27) { transition-delay: 2.7s; }
        &:nth-child(28) { transition-delay: 2.8s; }
        &:nth-child(29) { transition-delay: 2.9s; }
        &:nth-child(30) { transition-delay: 3s; }
        &:nth-child(31) { transition-delay: 3.1s; }
        &:nth-child(32) { transition-delay: 3.2s; }
        &:nth-child(33) { transition-delay: 3.3s; }
        &:nth-child(34) { transition-delay: 3.4s; }
        &:nth-child(35) { transition-delay: 3.5s; }
        &:nth-child(36) { transition-delay: 3.6s; }
        &:nth-child(37) { transition-delay: 3.7s; }
        &:nth-child(38) { transition-delay: 3.8s; }
        &:nth-child(39) { transition-delay: 3.9s; }
        &:nth-child(40) { transition-delay: 4s; }
        &:nth-child(41) { transition-delay: 4.1s; }
        &:nth-child(42) { transition-delay: 4.2s; }
        &:nth-child(43) { transition-delay: 4.3s; }
        &:nth-child(44) { transition-delay: 4.4s; }
        &:nth-child(45) { transition-delay: 4.5s; }
        &:nth-child(46) { transition-delay: 4.6s; }
        &:nth-child(47) { transition-delay: 4.7s; }
        &:nth-child(48) { transition-delay: 4.8s; }
        &:nth-child(49) { transition-delay: 4.9s; }
        &:nth-child(50) { transition-delay: 5s; }
        &:nth-child(51) { transition-delay: 5.1s; }
        &:nth-child(52) { transition-delay: 5.2s; }
        &:nth-child(53) { transition-delay: 5.3s; }
        &:nth-child(54) { transition-delay: 5.4s; }
        &:nth-child(55) { transition-delay: 5.5s; }
        &:nth-child(56) { transition-delay: 5.6s; }
        &:nth-child(57) { transition-delay: 5.7s; }
        &:nth-child(58) { transition-delay: 5.8s; }
        &:nth-child(59) { transition-delay: 5.9s; }
        &:nth-child(60) { transition-delay: 6s; }
        &:nth-child(61) { transition-delay: 6.1s; }
        &:nth-child(62) { transition-delay: 6.2s; }
        &:nth-child(63) { transition-delay: 6.3s; }
        &:nth-child(64) { transition-delay: 6.4s; }
        &:nth-child(65) { transition-delay: 6.5s; }
        &:nth-child(66) { transition-delay: 6.6s; }
        &:nth-child(67) { transition-delay: 6.7s; }
        &:nth-child(68) { transition-delay: 6.8s; }
        &:nth-child(69) { transition-delay: 6.9s; }
        &:nth-child(70) { transition-delay: 7s; }
        &:nth-child(71) { transition-delay: 7.1s; }
        &:nth-child(72) { transition-delay: 7.2s; }
        &:nth-child(73) { transition-delay: 7.3s; }
        &:nth-child(74) { transition-delay: 7.4s; }
        &:nth-child(75) { transition-delay: 7.5s; }
        &:nth-child(76) { transition-delay: 7.6s; }
        &:nth-child(77) { transition-delay: 7.7s; }
        &:nth-child(78) { transition-delay: 7.8s; }
        &:nth-child(79) { transition-delay: 7.9s; }
        &:nth-child(80) { transition-delay: 8s; }
        &:nth-child(81) { transition-delay: 8.1s; }
        &:nth-child(82) { transition-delay: 8.2s; }
        &:nth-child(83) { transition-delay: 8.3s; }
        &:nth-child(84) { transition-delay: 8.4s; }
        &:nth-child(85) { transition-delay: 8.5s; }
        &:nth-child(86) { transition-delay: 8.6s; }
        &:nth-child(87) { transition-delay: 8.7s; }
        &:nth-child(88) { transition-delay: 8.8s; }
        &:nth-child(89) { transition-delay: 8.9s; }
        &:nth-child(90) { transition-delay: 9s; }
        &:nth-child(91) { transition-delay: 9.1s; }
        &:nth-child(92) { transition-delay: 9.2s; }
        &:nth-child(93) { transition-delay: 9.3s; }
        &:nth-child(94) { transition-delay: 9.4s; }
      }
    }

    p {
      font-family: $ds-font-family-complementary;
      font-weight: 300;
      font-style: italic;
      margin: 0;
      color: $ds-color-green;
      opacity: 0;
      transform: translateY(10px);
      transition: all 0.2s ease-out;
    }

    h1 {
      width: 90%;
      max-width: 320px;
      margin: 0 auto;
      font-weight: 600;
      line-height: 1.3;
      letter-spacing: ds-rem-calc(-0.5);
      opacity: 0;
      transform: translateY(10px);
      transition: all 0.2s ease-out;
      transition-delay: 0.1s;

      font-size: ds-rem-calc(18);

      @include media($tablet) {
        font-size: ds-rem-calc(24);
        max-width: 450px;
      }
      @include media($laptop) {
        font-size: ds-rem-calc(32);
        max-width: 580px;
      }
      @include media($desktop) {
        font-size: ds-rem-calc(36);
        max-width: 650px;
      }
    }

    &.loaded {
      h1, p {
        opacity: 1;
        transform: translateY(0);
      }
      img.inject-svg {
        opacity: 1;
      }
      svg {
        g {
          opacity: 1;
        }
      }
    }

    &__headline {
      width: 100%;
      position: absolute;
      top: 46%;
      left: 0;
      transform: translateY(-50%);
    }
  }

  &__feed {
    min-height: 1000px;
    margin-bottom: 40px;
    position: relative;

    @include media($tablet) {
      // height: 2500px;
      margin-bottom: 0;
      overflow: hidden;

      &:after {
        content: "";
        display: none;
        width: 100%;
        height: 200px;
        position: absolute;
        bottom: 0;
        left: 0;
        pointer-events: none;
        /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f5f5f5+1,f5f5f5+100&0+0,1+100 */
        background: -moz-linear-gradient(top,  rgba(245,245,245,0) 0%, rgba(245,245,245,0.01) 1%, rgba(245,245,245,1) 100%); /* FF3.6-15 */
        background: -webkit-linear-gradient(top,  rgba(245,245,245,0) 0%,rgba(245,245,245,0.01) 1%,rgba(245,245,245,1) 100%); /* Chrome10-25,Safari5.1-6 */
        background: linear-gradient(to bottom,  rgba(245,245,245,0) 0%,rgba(245,245,245,0.01) 1%,rgba(245,245,245,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00f5f5f5', endColorstr='#f5f5f5',GradientType=0 ); /* IE6-9 */
        transition: all 1s;
      }
    }
    @include media($tablet) {
      // height: 1800px;
      margin-bottom: 30px;
    }

    &.feed-ar {
      @include media($tablet) {
        height: auto;
        margin-bottom: 40px;

        &:after {
          display: none;
        }
      }
    }

    &.expanded {
      margin-bottom: 40px;
      &:after { opacity: 0; }
    }

    .expand--feed {
      display: none;
      position: absolute;
      bottom: 0;
      left: 50%;
      padding: 10px 20px;
      background: white;
      color: $ds-color-green;
      z-index: 10;
      transform: translateX(-50%);
      font-family: $ds-font-family-complementary;
      font-size: ds-rem-calc(16);
      line-height: 26px;
      font-weight: 300;
      text-align: center;
      cursor: pointer;

      &:before {
        content: "+";
        display: inline-block;
        line-height: 26px;
        width: 30px;
        font-family: $ds-font-family;
        border: 2px solid $ds-color-link;
        border-radius: 50%;
        text-align: center;
        margin-right: 10px;
      }

      &:hover {
        background: $ds-color-green;
        color: white;

        &:before {
          border-color: white;
        }
      }

      @include media($tablet) {
        display: block;
      }
    }

    .no-js & {
      display: none;
    }

    h2 {
      font-family: $ds-font-family-complementary;
      font-size: ds-rem-calc(16);
      font-weight: 300;
      font-style: italic;
      color: lighten($ds-color-charcoal, 50);
      background: white;
      display: inline-block;
      position: relative;
      padding: 12px 20px;
      margin: 0;
    }

    &__header {
      @include outer-container;
      text-align: center;
      margin-bottom: 30px;
    }

    &__blocks {
      width: 90%;
      max-width: 1500px;
      margin: 0 auto;

      &.single-ar {
        text-align: center;
        article {
          margin: 0 auto;
          position: static!important;
        }
      }
    }
  }

  &__testimonials {
    margin-top: 60px;
    padding: 60px 0;
    background: $ds-color-yellow;

    h2 {
      display: inline-block;
      margin: 0;
      font-size: ds-rem-calc(16);
      font-style: italic;
      color: white;
      position: relative;
      background: $ds-color-charcoal;
      color: $ds-color-yellow;
      padding: 12px 20px;
    }

    &__header {
      @include outer-container;
      text-align: center;
      margin-bottom: 30px;
    }
    &__content {
      @include outer-container;
      width: 1200px;
      max-width: 90%;

      &.feed {
        .block {
          text-align: left;

          @include media($tablet) {
            width: 80%;
            margin-left: 10%;
          }
          @include media($laptop) {
            width: calc(50% - 10px);
            margin-left: 0;
          }
          @include media($desktop) {
            width: calc(50% - 10px);
          }
        }
      }
    }
  }

  &__colleagues {
  }
}

